# cadhr

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  LANG_SPEC.md  MIGRATION.md  justfile
cadhr-lang/: Cargo.toml
cadhr-lang-macros/: Cargo.toml
cadhr-lang/examples/: check_cadhr_proj.rs
cadhr-lang/legacy_prolog/src/: bezier.rs  bom.rs  builtins.rs  manifold_bridge.rs  module.rs  rational.rs  term_rewrite.rs  test_helpers.rs  types.rs
cadhr-lang/src/: assertions.rs  bom.rs  builtins.rs  constraint.rs  diagnostic.rs  lib.rs  main.rs  manifold_bridge.rs  module.rs  parse.rs  rational.rs  sketch.rs  term_rewrite.rs  typecheck.rs
cadhr-lang/src/runtime/: builtin.rs  eval.rs  manifold_bridge.rs  mod.rs  value.rs
cadhr-lang/src/sema/: builtin.rs  class.rs  env.rs  exhaustive.rs  infer.rs  infer_ty.rs  mod.rs  sketch.rs  slider.rs  subst.rs  ty.rs
cadhr-lang/src/syntax/: ast.rs  free_vars.rs  layout.rs  lex.rs  mod.rs  parse.rs  pretty.rs
cadhr-lang/std/: db.cadhr
cadhr-lang/std/Std/: db.cadhr
cadhr-lang/tests/: builtin_extras.rs  if_multiline.rs  letrec_forward_ref.rs  mechanism.cadhr  mechanism_integration.rs  migration_bed_cable_clip.cadhr  migration_bed_drink_holder.cadhr  migration_counter_cable_clip.cadhr  migration_desk_foot_cover.cadhr  migration_integration.rs  migration_lib.rs  migration_loki.rs  migration_loki_debug.rs  point_record.rs  proj_all.rs  proj_loki.rs  repro_get_partial.rs  sig_param_field.rs  undefined_name.rs
cadhr-lang/tests/migration_loki/: loki_home_key.cadhr
cadhr-lang/tests/migration_loki/Bolts/: db.cadhr
src/: events.rs  (+9 more)
(+9 files in other folders)
