[package]
name = "cadhr"
version = "0.1.0"
edition = "2024"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
    "cadhr-lang",
    "cadhr-lsp",
]
exclude = [
    "tree-sitter-cadhr-lang",
]

[dependencies]
iced = { version = "0.14", features = ["advanced", "tokio"] }
bytemuck = { version = "1", features = ["derive"] }
glam = "0.33"
manifold-rs = "0.7"
cadhr-lang = { path = "cadhr-lang" }
threemf = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.17"
dirs = "6"

[dev-dependencies]
iced_test = "0.14"
tempfile = "3"
