[package]
name = "cadhr-lang"
version = "0.1.0"
edition = "2024"
# cadhr-lang/examples/ はユーザー個人のユーティリティ (.gitignore 済み)。
# 自動 example target としての取り込みを無効化する。
autoexamples = false

[lib]
name = "cadhr_lang"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"

[features]
default = ["manifold"]
manifold = ["dep:manifold-rs", "dep:stl_io"]

[dependencies]
manifold-rs = { version = "0.7", optional = true }
stl_io = { version = "0.11", optional = true }
serde_json = "1"
num-rational = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
chumsky = { version = "0.13", features = ["pratt"] }
ariadne = "0.6"

[dev-dependencies]
tempfile = "3"
approx = "0.5"
